fixed: Image carousel layout shift

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -29,6 +29,10 @@
   transition-delay: 0ms;
 }
 
+.bull[data-idx] {
+  color: rgb(52, 52, 52);
+}
+
 .bowlby-one {
   font-family: "Bowlby One", cursive;
 }
